# storage/api-docs/api-docs.yaml
@@ -755,25 +755,6 @@ paths:
                   message:
                     type: string
                     example: 'Categories are gotten successfully'
-                  data:
-                    type: array
-                    items:
-                      properties:
-                        id:
-                          type: integer
-                          example: 1
-                        name:
-                          type: string
-                          example: Perfumes
-                        created_at:
-                          type: string
-                          format: date-time
-                          example: '2024-01-01T00:00:00.000000Z'
-                        updated_at:
-                          type: string
-                          format: date-time
-                          example: '2024-01-01T00:00:00.000000Z'
-                      type: object
                 type: object
   /api/checkout:
     post:
